--- a/style.css
+++ b/style.css
@@ -24,22 +24,26 @@ body{
 
 .btn-container{
     display: grid;
-    grid-template-columns: repeat(4, 100px);
-    grid-template-rows: repeat(5, 70px);
+    grid-template-columns: repeat(4, 70px);
+    grid-template-rows: repeat(5, 50px);
     gap: 10px;
 }
 
 .screen{
-    width: 100%;
     background-color:  rgb(235, 235, 235);
     border: 0.5px solid gray;
     height: 100px;
     border-radius: 5px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+    padding: 10px;
+    font-size: 30px;
 }
 
 .btn-container .btn{
     padding: 5px;
-    min-height: 70px;
+    min-height: 50px;
     font-size: 20px;
     background-color: beige;
     border: 0.5px solid gray;
