--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@500&display=swap');
+
 *{
     margin: 0;
     padding: 0;
@@ -30,6 +32,7 @@ body{
 }
 
 .screen{
+    font-family: 'Orbitron', sans-serif;
     background-color:  rgb(235, 235, 235);
     border: 0.5px solid gray;
     height: 100px;
